# click-extra

./: .buildinfo  .bumpversion.cfg  .gitignore  .mailmap  changelog.html  changelog.md  citation.cff  claude.md  click_extra.html  click_extra.sphinx.html  click_extra.tests.html  code-of-conduct.html  colorize.html  commands.html  config.html  genindex.html  index.html  install.html  issues.html  license.html  logging.html  modules.html  objects.inv  parameters.html  platform.html  platforms.html  py-modindex.html  pygments.html  pyproject.toml  pytest.html  readme.md  renovate.json5  run.html  search.html  searchindex.js  setup.cfg  sphinx.html  table.html  tabulate.html  telemetry.html  (+8 more)
.claude/skills/repomatic-changelog/: SKILL.md
.claude/skills/repomatic-deps/: SKILL.md
.claude/skills/repomatic-sync/: SKILL.md
.claude/skills/sphinx-docs-sync/: SKILL.md
.doctrees/: changelog.doctree  click_extra.doctree  click_extra.sphinx.doctree  click_extra.tests.doctree  code-of-conduct.doctree  colorize.doctree  config.doctree  environment.pickle  index.doctree  install.doctree  issues.doctree  license.doctree  logging.doctree  modules.doctree  platform.doctree  platforms.doctree  run.doctree  tabulate.doctree  tests.doctree  todolist.doctree  tutorial.doctree
.github/: dependabot.yaml  labeller-file-based.yaml  labels.json  update_changelog.py  zizmor.yml
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: autofix.yaml  autolock.yaml  build.yaml  cancel-runs.yaml  changelog.yaml  debug-nuitka.yaml  debug.yaml  docs.yaml  label-sponsors.yaml  labeller-content-based.yaml  labeller-file-based.yaml  labels.yaml  lint.yaml  release.yaml  renovate.yaml  tests.yaml
_modules/: functools.html  index.html
_modules/click/: core.html  decorators.html  exceptions.html  formatting.html  parser.html  termui.html  types.html  utils.html
_modules/click_extra/: colorize.html  commands.html  config.html  decorators.html  docs_update.html  envvar.html  logging.html  parameters.html  platform.html  platforms.html  pygments.html  pytest.html  run.html  sphinx.html  table.html  tabulate.html  telemetry.html  testing.html  timer.html  types.html  version.html
_modules/click_extra/sphinx/: alerts.html  click.html
_modules/click_extra/tests/: conftest.html  test_config.html  (+13 more)
_modules/cloup/: _commands.html  _context.html  _option_groups.html  _params.html  _sections.html  styling.html  types.html
_modules/tests/: conftest.html  test_colorize.html  test_commands.html  test_config.html  test_envvar.html  test_logging.html  test_parameters.html  test_platforms.html  test_pygments.html  test_pytest.html  test_sphinx.html  test_sphinx_alerts.html  test_sphinx_click.html  test_table.html  test_telemetry.html  test_testing.html  test_timer.html  test_types.html  test_version.html
_sources/: click_extra.rst.txt  click_extra.sphinx.rst.txt  click_extra.tests.rst.txt  colorize.md.txt  commands.md.txt  config.md.txt  index.md.txt  install.md.txt  issues.md.txt  license.md.txt  logging.md.txt  modules.rst.txt  parameters.md.txt  platforms.md.txt  pygments.md.txt  pytest.md.txt  sphinx.md.txt  table.md.txt  tabulate.md.txt  telemetry.md.txt  testing.md.txt  tests.rst.txt  timer.md.txt  tutorial.md.txt  types.md.txt  version.md.txt
_static/: custom.css  documentation_options.js
click_extra/: __init__.py  __main__.py  _types.py  accessibility.py  carapace.py  cli.py  cli_wrapper.py  color.py  colorize.py  commands.py  config.py  config_schema.py  context.py  ctx_meta.py  decorators.py  docs.py  docs_update.py  envvar.py  execution.py  highlight.py  jobs.py  logging.py  man_page.py  mkdocs.py  myst_converter.py  parameters.py  platform.py  platforms.py  prebake.py  pygments.py  pytest.py  rst_to_myst.py  run.py  sphinx.py  spinner.py  spinner_presets.py  styling.py  table.py  tabulate.py  telemetry.py  (+12 more)
click_extra/config/: __init__.py  builtin.py  formats.py  option.py  schema.py
click_extra/sphinx/: __init__.py  _base.py  alerts.py  click.py  manpages.py  matrix.py  myst_docstrings.py  python.py
click_extra/tests/: conftest.py  test_colorize.py  test_commands.py  test_config.py  test_logging.py  test_parameters.py  test_platform.py  test_platforms.py  test_pygments.py  test_run.py  test_tabulate.py  test_telemetry.py  test_testing.py  test_timer.py  test_version.py
docs/: benchmark.md  binaries.md  carapace.md  click_extra.config.md  click_extra.md  click_extra.rst  click_extra.sphinx.md  click_extra.tests.rst  colorize.md  commands.md  conf.py  config.md  context.md  contributing.md  decorators.md  docs_update.py  envvar.md  execution.md  index.md  install.md  issues.md  jobs.md  license.md  logging.md  man-page.md  mkdocs.md  myst-docstrings.md  parameters.md  platform.md  platforms.md  pygments.md  pytest.md  run.md  screenshots.md  sphinx.md  spinner.md  styling.md  table.md  tabulate.md  telemetry.md  (+16 more)
docs/_static/: custom.css
docs/assets/: binaries.csv  dependencies.mmd  virustotal-scans.json
docs/images/: dependencies.dot  dependencies.mmd
tests/: carapace-spec.schema.json  cli-test-plan.toml  cli-test-plan.yaml  cli-test-suite.toml  conftest.py  test_accessibility.py  test_carapace.py  test_cli_wrapper.py  test_color.py  test_colorize.py  test_commands.py  test_config.py  test_config_schema.py  test_config_themes.py  test_context.py  test_ctx_meta.py  test_envvar.py  test_execution.py  test_highlight.py  test_jobs.py  test_logging.py  test_man_page.py  test_mkdocs.py  test_myst_converter.py  test_parameters.py  test_platforms.py  test_pygments.py  test_pyproject.py  test_pytest.py  test_rst_to_myst.py  test_sphinx.py  test_sphinx_alerts.py  test_sphinx_click.py  test_spinner.py  test_styling.py  test_table.py  test_tabulate.py  test_telemetry.py  test_test_plan.py  test_test_suite.py  (+8 more)
tests/mkdocs/: conftest.py  test_mkdocs.py
tests/sphinx/: conftest.py  test_sphinx.py  test_sphinx_alerts.py  test_sphinx_click.py  test_sphinx_click_config.py  test_sphinx_click_tree.py  test_sphinx_manpages.py  test_sphinx_matrix.py  test_sphinx_myst_docstrings.py  test_sphinx_python.py
(+2 files in other folders)
