[project]
# Docs: https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
name = "click-extra"
version = "6.0.3"
# Python versions and their status: https://devguide.python.org/versions/
requires-python = ">= 3.11"
description = "🌈 Drop-in replacement for Click to make user-friendly and colorful CLI"
authors = [{ name = "Kevin Deldycke", email = "kevin@deldycke.com" }]
readme = "readme.md"
keywords = [
    'ansi-colors',
    'cli',
    'cloup',
    'colorization',
    'configuration',
    'console',
    'ini',
    'json',
    'logging',
    'multiplatform',
    'pygments',
    'pytest',
    'python',
    'python-tabulate',
    'sphinx',
    'terminal',
    'toml',
    'xml',
    'yaml',
]
classifiers = [
    # See: https://pypi.org/pypi?%3Aaction=list_classifiers
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Environment :: Plugins',
    'Framework :: Pytest',
    'Framework :: Sphinx',
    'Framework :: Sphinx :: Extension',
    'Framework :: Sphinx :: Theme',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX :: Linux',
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    'Programming Language :: Python :: Implementation :: CPython',
    'Topic :: Documentation :: Sphinx',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Software Development :: User Interfaces',
    'Topic :: System :: Logging',
    'Topic :: System :: Shells',
    'Topic :: Terminals',
    'Topic :: Text Processing :: Filters',
    'Topic :: Text Processing :: Markup :: HTML',
    'Topic :: Text Processing :: Markup :: Markdown',
    'Topic :: Text Processing :: Markup :: XML',
    'Topic :: Text Processing :: Markup :: reStructuredText',
    'Topic :: Utilities',
    'Typing :: Typed',
]
# Semantic versioning works in theory. In practice, it is hard to guarantee.
# That's why we rely on >= specifier instead of ~= to relax constraints. This gives more freedom to packagers to
# release hotfixes for security vulnerabilities in the future, as Click Extra becomes more popular.
# All minimal version choice are documented. Reasons to bump a minimal version are:
# - bug fixes,
# - security fixes,
# - new code path we depends on,
# - aligns minimal Python requirements to ours,
# - adds new explicit support Python version.
dependencies = [
    # boltons 23.0.0 is the first version to support Python 3.11.
    # XXX boltons.ecoutils breaks PDB interactive sessions in pytest. Investigation of the root cause is being
    # discussed upstream at: https://github.com/mahmoud/boltons/issues/334
    "boltons >= 23.0.0",
    # Click 8.3.0 to fix several issues with flag values, and flag envvars: https://github.com/pallets/click/pull/3030
    "click >= 8.3.0",
    # Cloup 3.0.7 fix issues with metavars: https://github.com/kdeldycke/click-extra/pull/1281
    "cloup >= 3.0.7",
    # deepmerge 2.0 is the first version used in Click Extra.
    "deepmerge >= 2.0",
    # extra-platforms 3.0.0 is the first version to drop Python 3.10, like us.
    "extra-platforms >= 3.0.0",
    # PyYAML 6.0.3 is the first version to support Python 3.14.
    "pyyaml >= 6.0.3",
    # requests 2.32.4 fix CVE-2024-47081.
    "requests >= 2.32.4",
    # tabulate 0.9 is the first to add `*grid` and `*outline` formats.
    "tabulate [widechars] >= 0.9",
    # wcmatch 10.0 fix some inconsistencies in globbing and symlinks.
    "wcmatch >= 10.0",
    # xmltodict 0.15.1 prevent XML injection.
    "xmltodict >= 0.15.1",
]

[project.optional-dependencies]
### Groups below are runtime extra dependencies, so we're also rely on >= specifiers as explained above.
pygments = [
    # Pygments 2.14.0 is the first version with lexers.algebra.GAPConsoleLexer that is referenced in our code.
    "pygments >= 2.14",
    # pygments-ansi-color 0.3.0 is the first version to set the default theme of ANSI colors.
    "pygments-ansi-color >= 0.3.0",
]
sphinx = [
    # docutils 0.20 is the minimal version for Sphinx 8.2.
    "docutils >= 0.20",
    # Pygments 2.14.0 is the first version with lexers.algebra.GAPConsoleLexer that is referenced in our code.
    "pygments >= 2.14",
    # pygments-ansi-color 0.3.0 is the first version to set the default theme of ANSI colors.
    "pygments-ansi-color >= 0.3.0",
    # Sphinx 8.2 is the first version to drop Python 3.10, like us.
    "sphinx >= 8.2",
]
pytest = [
    # pytest 8.2.1 is the first version to support Python 3.13.
    "pytest >= 8.2.1",
]
## Non-runtime dependencies, for development and CI, are using the ~= specifier to reduce randomness.
## Unless the package has been referenced in sections above, in which case we align the version specifier.
test = [
    "coverage [toml] ~= 7.10.0",
    # extra-platforms 3.0.0 is the first version to drop Python 3.10, like us.
    "extra-platforms [pytest] >= 3.0.0",
    "myst-parser ~= 4.0.0",
    # pytest 8.2.1 is the first version to support Python 3.13.
    "pytest >= 8.2.1",
    "pytest-cov ~= 7.0.0",
    "pytest-github-actions-annotate-failures ~= 0.3.0",
    "pytest-httpserver ~= 1.1.0",
    "pytest-randomly ~= 4.0.0",
    # Sphinx 8.2 is the first version to drop Python 3.10, like us.
    "sphinx >= 8.2",
]
typing = [
    "types-boltons ~= 25.0.0.20250919",
    "types-docutils ~= 0.22.2.20250924",
    "types-Pygments ~= 2.19.0.20250107",
    "types-PyYAML ~= 6.0.12.9",
    "types-requests ~= 2.32.4.20250611",
    "types-tabulate ~= 0.9.0.2",
    "types-xmltodict ~= 1.0.1.20250920",
]
docs = [
    "furo ~= 2025.9.25",
    "myst-parser ~= 4.0.0",
    # Sphinx 8.2 is the first version to drop Python 3.10, like us.
    "sphinx >= 8.2",
    # sphinx-autodoc-typehints 3.1.0 is the first version to drop Python 3.10.
    "sphinx-autodoc-typehints ~= 3.5.1",
    "sphinx-copybutton ~= 0.5.2",
    "sphinx-design ~= 0.6.0",
    "sphinx-issues ~= 5.0.0",
    "sphinxcontrib-mermaid ~= 1.0.0",
    "sphinxext-opengraph ~= 0.13.0",
]

[project.urls]
"Homepage" = 'https://github.com/kdeldycke/click-extra'
"Documentation" = 'https://kdeldycke.github.io/click-extra'
"Repository" = 'https://github.com/kdeldycke/click-extra'
"Funding" = "https://github.com/sponsors/kdeldycke"
"Issues" = "https://github.com/kdeldycke/click-extra/issues"
"Changelog" = "https://github.com/kdeldycke/click-extra/blob/main/changelog.md"

[tool.uv]
package = true

[project.entry-points."pygments.formatters"]
ansi-html-formatter = "click_extra.pygments:AnsiHtmlFormatter"

[project.entry-points."pygments.filters"]
ansi-filter = "click_extra.pygments:AnsiFilter"

[project.entry-points."pygments.lexers"]
# The name of the entrypoint value doesn’t really matter, Pygments extracts required metadata from the class definition.
# Source: https://pygments.org/docs/plugins/#defining-plugins-through-entrypoints
ansi-bash-session = "click_extra.pygments:AnsiBashSessionLexer"
ansi-dylan-console = "click_extra.pygments:AnsiDylanConsoleLexer"
ansi-elixir-console = "click_extra.pygments:AnsiElixirConsoleLexer"
ansi-erlang-shell = "click_extra.pygments:AnsiErlangShellLexer"
ansi-gap-console = "click_extra.pygments:AnsiGAPConsoleLexer"
ansi-julia-console = "click_extra.pygments:AnsiJuliaConsoleLexer"
ansi-matlab-session = "click_extra.pygments:AnsiMatlabSessionLexer"
ansi-msdos-session = "click_extra.pygments:AnsiMSDOSSessionLexer"
ansi-output = "click_extra.pygments:AnsiOutputLexer"
ansi-postgres-console = "click_extra.pygments:AnsiPostgresConsoleLexer"
ansi-power-shell-session = "click_extra.pygments:AnsiPowerShellSessionLexer"
ansi-psysh-console = "click_extra.pygments:AnsiPsyshConsoleLexer"
ansi-python-console = "click_extra.pygments:AnsiPythonConsoleLexer"
ansi-r-console = "click_extra.pygments:AnsiRConsoleLexer"
ansi-ruby-console = "click_extra.pygments:AnsiRubyConsoleLexer"
ansi-sqlite-console = "click_extra.pygments:AnsiSqliteConsoleLexer"
ansi-tcsh-session = "click_extra.pygments:AnsiTcshSessionLexer"

[project.entry-points.pytest11]
# Make additional fixtures available to pytest.
# See: https://docs.pytest.org/en/latest/how-to/writing_plugins.html#making-your-plugin-installable-by-others
click-extra = "click_extra.pytest"

[tool.mypy]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
pretty = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ["furo"]

[tool.pytest.ini_options]
# https://docs.pytest.org/en/latest/customize.html#pyproject-toml
addopts = [
    "--durations=10",
    "--cov=click_extra",
    "--cov-branch",
    "--cov-precision=2",
    "--cov-report=term",
    "--cov-report=xml",
    "--junitxml=junit.xml",
    "--override-ini=junit_family=legacy",
]
# Make sure tests that are expected to fail do not resurect and start working all of a sudden.
xfail_strict = true

[tool.bumpversion]
current_version = "6.0.3"
allow_dirty = true

[[tool.bumpversion.files]]
# Update Python package version in any __init__.py file.
glob = "./**/__init__.py"
ignore_missing_version = true

[[tool.bumpversion.files]]
# Update version in project section.
filename = "./pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
# Update the version in standard Markdown changelog.
filename = "./changelog.md"
search = "## [{current_version} (unreleased)]("
replace = "## [{new_version} (unreleased)]("

[[tool.bumpversion.files]]
# Update the version in the citation file.
filename = "./citation.cff"
search = "version: {current_version}"
replace = "version: {new_version}"

[[tool.bumpversion.files]]
# Update the release date in the citation file.
filename = "./citation.cff"
regex = true
search = "date-released: \\d{{4}}-\\d{{2}}-\\d{{2}}"
replace = "date-released: {utcnow:%Y-%m-%d}"

[tool.typos]
default.extend-ignore-identifiers-re = [
    # error: `Uper` should be `Super`, `Upper`
    #     ╭▸ ./tests/test_envvar.py:113:19
    #     │
    # 113 │                 "sUper",
    #     ╰╴                  ━━━━
    "sUper",
    # error: `Als` should be `Also`
    #     ╭▸ ./tests/test_envvar.py:179:11
    #     │
    # 179 │         "fAlsE": False,
    #     ╰╴          ━━━
    "fAlsE",
    # error: `mey` should be `may`
    #     ╭▸ ./tests/test_colorize.py:890:22
    #     │
    # 890 │             "H\x1b[32mey\x1b[0m-xx-xxx-\x1b[32mhe\x1b[0mY-xXxXxxxxx-\x1b[32mhey\x1b[0m",
    #     ╰╴                     ━━━
    "mey",
    # error: `nd` should be `and`
    #     ╭▸ ./tests/test_sphinx.py:232:29
    #     │
    # 232 │             + '<span class="nd">@command</span>\n'
    #     ╰╴                            ━━
    "nd",
]
